Archive2/1f/51243a8eb7b0a9/output
main.cpp:54:17: error: use of undeclared identifier 'boost'
struct area_f : boost::static_visitor<double> {
                ^
main.cpp:54:24: error: unknown template name 'static_visitor'
struct area_f : boost::static_visitor<double> {
                       ^
2 errors generated.
